--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react": "~18.2.14",
     "expo": "~49.0.8",
     "expo-blur": "~12.4.1",
-    "expo-blur": "~12.4.1",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
@@ -30,6 +29,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swiper": "^1.6.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
