--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-maps": "^1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-share": "^9.4.1",
     "react-native-svg": "13.9.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-swiper": "^1.6.0",
