--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "~18.2.14",
     "expo": "~49.0.8",
     "expo-blur": "~12.4.1",
+    "expo-image-picker": "^14.5.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
