--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.2.14",
+    "chess.js": "^1.0.0-beta.6",
     "expo": "~49.0.8",
     "expo-blur": "~12.4.1",
     "expo-image-picker": "^14.5.0",
