--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
+    "react-native-icon-picker": "^1.0.6",
     "react-native-maps": "^1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
