--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.2.14",
     "chess.js": "^1.0.0-beta.6",
+    "chessboardjsx": "^2.4.7",
     "expo": "~49.0.8",
     "expo-blur": "~12.4.1",
     "expo-image-picker": "^14.5.0",
@@ -23,11 +24,15 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
+    "install": "^0.13.0",
+    "npm": "^10.1.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-icon-picker": "^1.0.6",
     "react-native-maps": "^1.7.1",
+    "react-native-reanimated": "^3.5.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-share": "^9.4.1",
